<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.digdes.school</groupId>
        <artifactId>project-system-business</artifactId>
        <version>${revision}${changelist}</version>
    </parent>

    <artifactId>project-system-services</artifactId>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.digdes.school</groupId>
            <artifactId>project-system-dto</artifactId>
            <version>${revision}${changelist}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.digdes.school</groupId>
            <artifactId>project-system-models</artifactId>
            <version>${revision}${changelist}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.digdes.school</groupId>
            <artifactId>project-system-repositories</artifactId>
            <version>${revision}${changelist}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.digdes.school</groupId>
            <artifactId>project-system-dao</artifactId>
            <version>${revision}${changelist}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

</project>